spvitamin DomainUser class fixed